package di

import (
	"context"
	"fmt"
	"time"

	"github.com/yairfalse/tapio/pkg/client"
	"github.com/yairfalse/tapio/pkg/engine"
	"github.com/yairfalse/tapio/pkg/plugins"
)

// Module defines a DI module that can register services
type Module interface {
	Name() string
	Configure(container *Container) error
}

// CoreModule provides core services
type CoreModule struct{}

func (m *CoreModule) Name() string {
	return "core"
}

func (m *CoreModule) Configure(container *Container) error {
	// Register configuration
	container.RegisterSingleton("config", func() (*Config, error) {
		return LoadConfig()
	}, "core")

	// Register logger
	container.RegisterSingleton("logger", func(config *Config) (*Logger, error) {
		return NewLogger(config.LogLevel)
	}, "core")

	// Register metrics
	container.RegisterSingleton("metrics", func() (*Metrics, error) {
		return NewMetrics()
	}, "core", "observability")

	return nil
}

// EngineModule provides engine services
type EngineModule struct{}

func (m *EngineModule) Name() string {
	return "engine"
}

func (m *EngineModule) Configure(container *Container) error {
	// Register Kubernetes analyzer
	container.RegisterSingleton("k8s-analyzer", func(config *Config, logger *Logger) (engine.KubernetesAnalyzer, error) {
		return NewKubernetesAnalyzer(config.Kubernetes, logger)
	}, "engine", "analyzer")

	// Register event collector
	container.RegisterSingleton("event-collector", func(config *Config, logger *Logger) (engine.EventCollector, error) {
		return NewEventCollector(config.EventCollector, logger)
	}, "engine", "collector")

	// Register pattern detector
	container.RegisterSingleton("pattern-detector", func(config *Config, logger *Logger) (engine.PatternDetector, error) {
		return NewPatternDetector(config.PatternDetector, logger)
	}, "engine", "detector")

	// Register main engine
	container.RegisterSingleton("engine", func(
		k8sAnalyzer engine.KubernetesAnalyzer,
		eventCollector engine.EventCollector,
		patternDetector engine.PatternDetector,
		logger *Logger,
	) (engine.Engine, error) {
		return NewEngine(k8sAnalyzer, eventCollector, patternDetector, logger)
	}, "engine", "main")

	return nil
}

// ClientModule provides client services
type ClientModule struct{}

func (m *ClientModule) Name() string {
	return "client"
}

func (m *ClientModule) Configure(container *Container) error {
	// Register engine client
	container.RegisterSingleton("engine-client", func(config *Config) (*client.EngineClient, error) {
		clientConfig := client.Config{
			Endpoint: config.Engine.Endpoint,
			Timeout:  config.Engine.Timeout,
			TLS:      config.Engine.TLS,
		}
		return client.NewEngineClient(clientConfig), nil
	}, "client")

	return nil
}

// PluginModule provides plugin services
type PluginModule struct{}

func (m *PluginModule) Name() string {
	return "plugin"
}

func (m *PluginModule) Configure(container *Container) error {
	// Register plugin manager
	container.RegisterSingleton("plugin-manager", func(config *Config, logger *Logger) (*plugins.PluginManager, error) {
		return NewPluginManager(config.Plugins, logger)
	}, "plugin", "manager")

	// Register plugin registry
	container.RegisterSingleton("plugin-registry", func(config *Config) (*plugins.PluginRegistry, error) {
		return NewPluginRegistry(config.Plugins.PluginDirs)
	}, "plugin", "registry")

	return nil
}

// APIModule provides API services
type APIModule struct{}

func (m *APIModule) Name() string {
	return "api"
}

func (m *APIModule) Configure(container *Container) error {
	// Register gRPC server
	container.RegisterSingleton("grpc-server", func(
		engine engine.Engine,
		config *Config,
		logger *Logger,
	) (*GRPCServer, error) {
		return NewGRPCServer(engine, config.GRPC, logger)
	}, "api", "grpc")

	// Register REST server
	container.RegisterSingleton("rest-server", func(
		engine engine.Engine,
		config *Config,
		logger *Logger,
	) (*RESTServer, error) {
		return NewRESTServer(engine, config.REST, logger)
	}, "api", "rest")

	return nil
}

// Configuration types for DI
type Config struct {
	LogLevel        string                 `json:"log_level"`
	Kubernetes      *KubernetesConfig      `json:"kubernetes"`
	EventCollector  *EventCollectorConfig  `json:"event_collector"`
	PatternDetector *PatternDetectorConfig `json:"pattern_detector"`
	Engine          *EngineConfig          `json:"engine"`
	Plugins         *PluginsConfig         `json:"plugins"`
	GRPC            *GRPCConfig            `json:"grpc"`
	REST            *RESTConfig            `json:"rest"`
}

type KubernetesConfig struct {
	Kubeconfig string `json:"kubeconfig"`
	Namespace  string `json:"namespace"`
}

type EventCollectorConfig struct {
	BufferSize int           `json:"buffer_size"`
	Timeout    time.Duration `json:"timeout"`
}

type PatternDetectorConfig struct {
	PatternsDir string `json:"patterns_dir"`
	Enabled     bool   `json:"enabled"`
}

type EngineConfig struct {
	Endpoint string        `json:"endpoint"`
	Timeout  time.Duration `json:"timeout"`
	TLS      bool          `json:"tls"`
}

type PluginsConfig struct {
	PluginDirs []string `json:"plugin_dirs"`
	Enabled    bool     `json:"enabled"`
}

type GRPCConfig struct {
	Address string `json:"address"`
	Port    int    `json:"port"`
	TLS     bool   `json:"tls"`
}

type RESTConfig struct {
	Address string `json:"address"`
	Port    int    `json:"port"`
	TLS     bool   `json:"tls"`
}

// Service implementations (these would be implemented properly in their respective packages)

type Logger struct {
	level string
}

func NewLogger(level string) (*Logger, error) {
	return &Logger{level: level}, nil
}

func (l *Logger) Info(msg string, args ...interface{}) {
	fmt.Printf("[INFO] "+msg+"\n", args...)
}

func (l *Logger) Error(msg string, args ...interface{}) {
	fmt.Printf("[ERROR] "+msg+"\n", args...)
}

func (l *Logger) Debug(msg string, args ...interface{}) {
	if l.level == "debug" {
		fmt.Printf("[DEBUG] "+msg+"\n", args...)
	}
}

type Metrics struct{}

func NewMetrics() (*Metrics, error) {
	return &Metrics{}, nil
}

func (m *Metrics) Start(ctx context.Context) error {
	return nil
}

func (m *Metrics) Stop(ctx context.Context) error {
	return nil
}

// Mock implementations for demonstration
func NewKubernetesAnalyzer(config *KubernetesConfig, logger *Logger) (engine.KubernetesAnalyzer, error) {
	return &MockKubernetesAnalyzer{}, nil
}

func NewEventCollector(config *EventCollectorConfig, logger *Logger) (engine.EventCollector, error) {
	return &MockEventCollector{}, nil
}

func NewPatternDetector(config *PatternDetectorConfig, logger *Logger) (engine.PatternDetector, error) {
	return &MockPatternDetector{}, nil
}

func NewEngine(k8s engine.KubernetesAnalyzer, events engine.EventCollector, patterns engine.PatternDetector, logger *Logger) (engine.Engine, error) {
	return &MockEngine{}, nil
}

func NewPluginManager(config *PluginsConfig, logger *Logger) (*plugins.PluginManager, error) {
	return plugins.NewPluginManager(), nil
}

func NewPluginRegistry(dirs []string) (*plugins.PluginRegistry, error) {
	return plugins.NewPluginRegistry(), nil
}

func NewGRPCServer(engine engine.Engine, config *GRPCConfig, logger *Logger) (*GRPCServer, error) {
	return &GRPCServer{}, nil
}

func NewRESTServer(engine engine.Engine, config *RESTConfig, logger *Logger) (*RESTServer, error) {
	return &RESTServer{}, nil
}

func LoadConfig() (*Config, error) {
	return &Config{
		LogLevel: "info",
		Kubernetes: &KubernetesConfig{
			Namespace: "default",
		},
		EventCollector: &EventCollectorConfig{
			BufferSize: 1000,
			Timeout:    5 * time.Second,
		},
		PatternDetector: &PatternDetectorConfig{
			PatternsDir: "./patterns",
			Enabled:     true,
		},
		Engine: &EngineConfig{
			Endpoint: "localhost:9090",
			Timeout:  30 * time.Second,
			TLS:      false,
		},
		Plugins: &PluginsConfig{
			PluginDirs: []string{"./plugins"},
			Enabled:    true,
		},
		GRPC: &GRPCConfig{
			Address: "0.0.0.0",
			Port:    9090,
			TLS:     false,
		},
		REST: &RESTConfig{
			Address: "0.0.0.0",
			Port:    8080,
			TLS:     false,
		},
	}, nil
}

// Mock implementations
type MockKubernetesAnalyzer struct{}

func (m *MockKubernetesAnalyzer) AnalyzeCluster(ctx context.Context, req *engine.ClusterAnalysisRequest) (*engine.ClusterAnalysisResponse, error) {
	return &engine.ClusterAnalysisResponse{Status: "healthy"}, nil
}

func (m *MockKubernetesAnalyzer) AnalyzeNamespace(ctx context.Context, req *engine.NamespaceAnalysisRequest) (*engine.NamespaceAnalysisResponse, error) {
	return &engine.NamespaceAnalysisResponse{Status: "healthy"}, nil
}

func (m *MockKubernetesAnalyzer) AnalyzeResource(ctx context.Context, req *engine.ResourceAnalysisRequest) (*engine.ResourceAnalysisResponse, error) {
	return &engine.ResourceAnalysisResponse{Status: "healthy"}, nil
}

type MockEventCollector struct{}

func (m *MockEventCollector) Subscribe(ctx context.Context, filter engine.EventFilter) (<-chan engine.Event, error) {
	ch := make(chan engine.Event)
	close(ch)
	return ch, nil
}

func (m *MockEventCollector) GetEventHistory(ctx context.Context, filter engine.EventFilter) ([]engine.Event, error) {
	return []engine.Event{}, nil
}

type MockPatternDetector struct{}

func (m *MockPatternDetector) DetectPatterns(ctx context.Context, events []engine.Event) ([]engine.PatternResult, error) {
	return []engine.PatternResult{}, nil
}

func (m *MockPatternDetector) GetSupportedPatterns() []engine.PatternInfo {
	return []engine.PatternInfo{}
}

type MockEngine struct{}

func (m *MockEngine) Start(ctx context.Context) error { return nil }
func (m *MockEngine) Stop(ctx context.Context) error  { return nil }
func (m *MockEngine) HealthCheck(ctx context.Context) (*engine.HealthStatus, error) {
	return &engine.HealthStatus{Status: "healthy"}, nil
}
func (m *MockEngine) ProcessEvents(ctx context.Context, events []engine.Event) (*engine.CorrelationResult, error) {
	return &engine.CorrelationResult{}, nil
}
func (m *MockEngine) GetPatterns() []engine.PatternInfo {
	return []engine.PatternInfo{}
}
func (m *MockEngine) GetMetrics() *engine.EngineMetrics {
	return &engine.EngineMetrics{}
}

type GRPCServer struct{}

func (g *GRPCServer) Start(ctx context.Context) error { return nil }
func (g *GRPCServer) Stop(ctx context.Context) error  { return nil }

type RESTServer struct{}

func (r *RESTServer) Start(ctx context.Context) error { return nil }
func (r *RESTServer) Stop(ctx context.Context) error  { return nil }
